Put, Delete, Validation and Error handling
