# controllers/index.js
@@ -1,5 +1,5 @@
 const { client } = require('../db');
-const { fetchAll, fetchOneDoc, insertSneaker } = require('../models/index');
+const { fetchAll, fetchOneDoc, insertSneaker, updateSneaker, deleteSneaker } = require('../models/index');
 
 
 const homeRoute = (req, res) => {
@@ -78,17 +78,70 @@ const postRoute = async (req, res) => {
     }
 };
 
-const updateRoute = (req, res) => {
-    res.send('Updating this guy here: ' + req.params.id);
+const updateRoute = async (req, res) => {
+    if (!req.params.id) {
+        res.status(404).json({
+            error: 'Resource not found. ID is missing.'
+        });
+    }
+
+    if (!req.body) {
+        res.status(400).json({
+            error: 'Bad Request. No data provided.'
+        })
+    }
+
+    // Create Sneaker Object
+    const sneaker = {
+        Name: req.body.Name,
+        Brand: req.body.Brand,
+        Color: req.body.Color,
+        PictureURL: req.body.PictureURL,
+        Size: req.body.Size,
+        Collab: req.body.Collab,
+        Description: req.body.Description
+    };
+
+    try {
+        const result = await updateSneaker(req.params.id, sneaker);
+
+        if (result.modifiedCount > 0) {
+            res.status(200).json({ message: "Sneaker was updated Successfully." })
+        } else {
+            res.status(400).json({ error: "Something went wrong :/" })
+        }
+    } catch (error) {
+        console.error(error);
+        res.status(500).json({
+            error: 'Internal Server Error.'
+        });
+    }
 };
 
-const deleteOneRoute = (req, res) => {
-    res.send('Bye, bye doc: ' + req.params.id);
+const deleteOneRoute = async (req, res) => {
+    const id = req.params.id;
+    if (!id) {
+        res.status(400).json({
+            error: 'No valid ID.'
+        });
+    }
+
+    try {
+        const result = await deleteSneaker(id);
+
+        if (result.deletedCount === 1) {
+            res.status(200).json({ message: "Doc was deleted successfully." })
+        } else {
+            res.status(400).json({ error: "Something went wrong, sorry." })
+        }
+    } catch (error) {
+        console.error(error);
+        res.status(500).json({
+            error: 'Internal Server Error.'
+        });
+    }
 };
 
-const deleteAllRoute = (req, res) => {
-    res.send('So long suckers...');
-};
 
 module.exports = {
     homeRoute,
@@ -98,5 +151,4 @@ module.exports = {
     postRoute,
     updateRoute,
     deleteOneRoute,
-    deleteAllRoute
 };
